<resources>
    <string name="app_name">Vérnyomásnapló</string>
    <string name="login_username">Felhasználónév</string>
    <string name="pls_login">Üdvözöljük!</string>
    <string name="login_pws">Jelszó</string>
    <string name="login_loginButton">Bejelentkezés</string>
    <string name="login_regButton">Regisztrálás</string>
    <string name="regisztReg">Regisztrálás</string>
    <string name="regisztVissza">Vissza</string>
    <string name="registRegTextview">Regisztráció</string>
    <string name="login_pws2">Jelszó ismét</string>
    <string name="registEmail">Email cím</string>
    <string name="loginbejelentkez_s_googellel">Bejelentkezés Googellel</string>
    <string name="loginGoogle">Bejelentkezés Google Fiókkal</string>
    <string name="title_activity_list_scrolling">ListScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_measurements">Measurements</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="loginEmail">Email</string>
    <string name="eddig_j">Eddig jó</string>
    <string name="m_r_s_hozz_ad_sa">Mérés hozzáadása</string>
    <string name="kijelentkez_s">Kijelentkezés</string>
    <string name="szerk">Szerk</string>
    <string name="_111">111</string>
    <string name="asd">-</string>
    <string name="_222">222</string>
    <string name="_333">333</string>
    <string name="_2021_04_24">2021.04.24</string>
    <string name="demo_bejelentkez_s">Demo bejelentkezés</string>
    <string name="diastole">Diastole</string>
    <string name="systole">Systole</string>
    <string name="pulse">Pulse</string>
    <string name="m_gse">Mégse</string>
    <string name="ment_s">Mentés</string>
    <string name="diastolebnujkm">Diastole:</string>
    <string name="systolevhbjnm">Systole:</string>
    <string name="asdasdasdasda">Systole</string>
    <string name="zuktjzhtgerwf">Diastole</string>
    <string name="rja_be_az_j_m_r_s_meredm_nyeit">Írja be az új mérés meredményeit!</string>


    <integer-array name="mesItemSys">
        <item>134</item>
        <item>134</item>
        <item>129</item>
        <item>130</item>
        <item>132</item>
        <item>128</item>
        <item>138</item>
        <item>126</item>
        <item>139</item>
        <item>143</item>
        <item>135</item>
        <item>132</item>
        <item>137</item>
        <item>134</item>
        <item>134</item>
    </integer-array>

    <integer-array name="mesItemDias">
        <item>67</item>
        <item>58</item>
        <item>58</item>
        <item>74</item>
        <item>58</item>
        <item>57</item>
        <item>70</item>
        <item>69</item>
        <item>66</item>
        <item>71</item>
        <item>62</item>
        <item>72</item>
        <item>69</item>
        <item>67</item>
        <item>58</item>
        <item>58</item>
    </integer-array>

    <integer-array name="mesItemPulse">
        <item>60</item>
        <item>68</item>
        <item>76</item>
        <item>82</item>
        <item>72</item>
        <item>60</item>
        <item>60</item>
        <item>77</item>
        <item>79</item>
        <item>71</item>
        <item>67</item>
        <item>80</item>
        <item>86</item>
        <item>60</item>
        <item>68</item>
    </integer-array>

    <string-array name="mesItemDate">
        <item>2022-04-01</item>
        <item>2022-04-02</item>
        <item>2022-04-03</item>
        <item>2022-04-04</item>
        <item>2022-04-05</item>
        <item>2022-04-06</item>
        <item>2022-04-07</item>
        <item>2022-04-08</item>
        <item>2022-04-09</item>
        <item>2022-04-10</item>
        <item>2022-04-11</item>
        <item>2022-04-12</item>
        <item>2022-04-13</item>
        <item>2022-04-14</item>
        <item>2022-04-15</item>
        <item>2022-04-16</item>
    </string-array>

</resources>