<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C3C9E9"
    tools:context=".Register">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registRegTextview"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#373F47"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />


    <EditText
        android:id="@+id/loginUsernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/login_username"
        android:inputType="text"
        android:textColor="#373F47"
        android:textColorHint="#546E7A"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/registEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/registEmail"
        android:inputType="textEmailAddress"
        android:textColor="#373F47"
        android:textColorHint="#546E7A"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/loginPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/login_pws"
        android:inputType="textPassword"
        android:textColor="#373F47"
        android:textColorHint="#546E7A"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/loginPassword2EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/login_pws2"
        android:inputType="textPassword"
        android:textColor="#373F47"
        android:textColorHint="#546E7A"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        tools:layout_editor_absoluteX="20dp" />

    <Button
        android:id="@+id/registerRegButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:text="@string/regisztReg"
        android:textColor="#212121"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        tools:layout_editor_absoluteX="20dp"
        android:onClick="Register" />

    <Button
        android:id="@+id/registerBackButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:text="@string/regisztVissza"
        android:textColor="#212121"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        tools:layout_editor_absoluteX="20dp"
        android:onClick="Back"/>



</androidx.constraintlayout.widget.ConstraintLayout>