<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C3C9E9"
    tools:context=".AddNewMeasurementActivity">

    <TextView
        android:id="@+id/fassss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rja_be_az_j_m_r_s_meredm_nyeit"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#373F47"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />


    <EditText
        android:id="@+id/SysA"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="20sp"
        android:ems="10"
        android:hint="@string/asdasdasdasda"
        android:textColor="#373F47"
        android:textColorHint="#546E7A"
        android:textSize="20sp"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        tools:layout_editor_absoluteX="20dp"/>



    <EditText
        android:id="@+id/DiasA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:hint="@string/zuktjzhtgerwf"
        android:ems="10"
        android:inputType="number"
        android:textColor="#373F47"
        android:textColorHint="#546E7A"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:layout_editor_absoluteX="20dp" />



    <EditText
        android:id="@+id/PulseA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:ems="10"
        android:hint="@string/pulse"
        android:textColor="#373F47"
        android:textColorHint="#546E7A"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        tools:layout_editor_absoluteX="20dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/m_gse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        android:onClick="Back"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ment_s"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        android:onClick="SaveMeasurement"
         />


</androidx.constraintlayout.widget.ConstraintLayout>