<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5sp"
    app:layout_constraintCircleRadius="4sp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#5A74C1">

        <TextView
            android:id="@+id/Sys"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:paddingLeft="8sp"
            android:layout_centerVertical="true"
            android:text="@string/_111"
            android:textColor="#373F47"
            android:textColorHint="#546E7A"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/shitHappens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="1sp"
            android:layout_centerVertical="true"
            android:text="/"
            android:textColor="#373F47"
            android:textColorHint="#546E7A"
            android:textSize="20sp"
            android:layout_toEndOf="@id/Sys"/>

        <TextView
            android:id="@+id/Dias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="1sp"
            android:layout_centerVertical="true"
            android:text="@string/_222"
            android:textColor="#373F47"
            android:textColorHint="#546E7A"
            android:textSize="20sp"
            android:layout_toEndOf="@id/shitHappens"/>

        <TextView
            android:id="@+id/Pulse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1sp"
            android:paddingLeft="8sp"
            android:layout_centerVertical="true"
            android:text="@string/_333"
            android:textColor="#373F47"
            android:textColorHint="#546E7A"
            android:textSize="20sp"
            android:layout_toEndOf="@id/Dias"/>

        <TextView
            android:id="@+id/Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="32sp"
            android:layout_toStartOf="@id/editMeas"
            android:paddingLeft="10sp"
            android:text="@string/_2021_04_24"
            android:textColor="#373F47"
            android:textColorHint="#546E7A"
            android:textSize="20sp" />

        <Button
            android:id="@+id/editMeas"
            android:layout_width="32sp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="64sp"
            android:drawableLeft="@drawable/ic_baseline_edit_24"
            android:padding="1sp" />

        <Button
            android:id="@+id/deleteMeas"
            android:layout_width="32sp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="1sp"
            android:layout_marginEnd="16sp"
            android:drawableLeft="@drawable/ic_baseline_delete_24" />




    </RelativeLayout>
</androidx.cardview.widget.CardView>